@@ -1,7 +1,6 @@
 package org.jabref.gui.maintable;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Objects;
@@ -11,6 +10,7 @@ import java.util.stream.Collectors;
 import javax.swing.undo.UndoManager;
 
 import javafx.collections.ListChangeListener;
+import javafx.css.PseudoClass;
 import javafx.scene.control.SelectionMode;
 import javafx.scene.control.TableColumn;
 import javafx.scene.control.TableRow;
@@ -38,23 +38,19 @@ import org.jabref.gui.keyboard.KeyBinding;
 import org.jabref.gui.keyboard.KeyBindingRepository;
 import org.jabref.gui.maintable.columns.LibraryColumn;
 import org.jabref.gui.maintable.columns.MainTableColumn;
+import org.jabref.gui.preferences.GuiPreferences;
+import org.jabref.gui.search.MatchCategory;
 import org.jabref.gui.util.ControlHelper;
 import org.jabref.gui.util.CustomLocalDragboard;
-import org.jabref.gui.util.TaskExecutor;
 import org.jabref.gui.util.UiTaskExecutor;
 import org.jabref.gui.util.ViewModelTableRowFactory;
-import org.jabref.logic.importer.FetcherClientException;
-import org.jabref.logic.importer.FetcherException;
-import org.jabref.logic.importer.FetcherServerException;
+import org.jabref.logic.FilePreferences;
 import org.jabref.logic.journals.JournalAbbreviationRepository;
-import org.jabref.logic.l10n.Localization;
+import org.jabref.logic.util.TaskExecutor;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.database.event.EntriesAddedEvent;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.BibEntryTypesManager;
-import org.jabref.model.entry.BibtexString;
-import org.jabref.model.util.FileUpdateMonitor;
-import org.jabref.preferences.PreferencesService;
 
 import com.airhacks.afterburner.injection.Injector;
 import com.google.common.eventbus.Subscribe;
@@ -65,19 +61,20 @@ import org.slf4j.LoggerFactory;
 public class MainTable extends TableView<BibEntryTableViewModel> {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(MainTable.class);
+    private static final PseudoClass MATCHING_SEARCH_AND_GROUPS = PseudoClass.getPseudoClass("matching-search-and-groups");
+    private static final PseudoClass MATCHING_SEARCH_NOT_GROUPS = PseudoClass.getPseudoClass("matching-search-not-groups");
+    private static final PseudoClass MATCHING_GROUPS_NOT_SEARCH = PseudoClass.getPseudoClass("matching-groups-not-search");
+    private static final PseudoClass NOT_MATCHING_SEARCH_AND_GROUPS = PseudoClass.getPseudoClass("not-matching-search-and-groups");
 
     private final LibraryTab libraryTab;
-    private final DialogService dialogService;
     private final StateManager stateManager;
     private final BibDatabaseContext database;
     private final MainTableDataModel model;
-
-    private final ImportHandler importHandler;
     private final CustomLocalDragboard localDragboard;
-    private final ClipBoardManager clipBoardManager;
-    private final BibEntryTypesManager entryTypesManager;
     private final TaskExecutor taskExecutor;
     private final UndoManager undoManager;
+    private final FilePreferences filePreferences;
+    private final ImportHandler importHandler;
     private long lastKeyPressTime;
     private String columnSearchTerm;
 
@@ -85,51 +82,42 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                      LibraryTab libraryTab,
                      LibraryTabContainer tabContainer,
                      BibDatabaseContext database,
-                     PreferencesService preferencesService,
+                     GuiPreferences preferences,
                      DialogService dialogService,
                      StateManager stateManager,
                      KeyBindingRepository keyBindingRepository,
                      ClipBoardManager clipBoardManager,
                      BibEntryTypesManager entryTypesManager,
                      TaskExecutor taskExecutor,
-                     FileUpdateMonitor fileUpdateMonitor) {
+                     ImportHandler importHandler) {
         super();
 
         this.libraryTab = libraryTab;
-        this.dialogService = dialogService;
         this.stateManager = stateManager;
         this.database = Objects.requireNonNull(database);
         this.model = model;
-        this.clipBoardManager = clipBoardManager;
-        this.entryTypesManager = entryTypesManager;
         this.taskExecutor = taskExecutor;
         this.undoManager = libraryTab.getUndoManager();
-        MainTablePreferences mainTablePreferences = preferencesService.getMainTablePreferences();
+        this.filePreferences = preferences.getFilePreferences();
+        this.importHandler = importHandler;
 
-        importHandler = new ImportHandler(
-                database,
-                preferencesService,
-                fileUpdateMonitor,
-                undoManager,
-                stateManager,
-                dialogService,
-                taskExecutor);
+        MainTablePreferences mainTablePreferences = preferences.getMainTablePreferences();
 
         localDragboard = stateManager.getLocalDragboard();
 
         this.setOnDragOver(this::handleOnDragOverTableView);
         this.setOnDragDropped(this::handleOnDragDroppedTableView);
 
-        this.getColumns().addAll(
-                new MainTableColumnFactory(
-                        database,
-                        preferencesService,
-                        preferencesService.getMainTableColumnPreferences(),
-                        undoManager,
-                        dialogService,
-                        stateManager,
-                        taskExecutor).createColumns());
+        MainTableColumnFactory mainTableColumnFactory = new MainTableColumnFactory(
+                database,
+                preferences,
+                preferences.getMainTableColumnPreferences(),
+                undoManager,
+                dialogService,
+                stateManager,
+                taskExecutor);
 
+        this.getColumns().addAll(mainTableColumnFactory.createColumns());
         this.getColumns().removeIf(LibraryColumn.class::isInstance);
 
         new ViewModelTableRowFactory<BibEntryTableViewModel>()
@@ -143,12 +131,16 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                         libraryTab,
                         dialogService,
                         stateManager,
-                        preferencesService,
+                        preferences,
                         undoManager,
                         clipBoardManager,
                         taskExecutor,
                         Injector.instantiateModelOrService(JournalAbbreviationRepository.class),
                         entryTypesManager))
+                .withPseudoClass(MATCHING_SEARCH_AND_GROUPS, entry -> entry.matchCategory().isEqualTo(MatchCategory.MATCHING_SEARCH_AND_GROUPS))
+                .withPseudoClass(MATCHING_SEARCH_NOT_GROUPS, entry -> entry.matchCategory().isEqualTo(MatchCategory.MATCHING_SEARCH_NOT_GROUPS))
+                .withPseudoClass(MATCHING_GROUPS_NOT_SEARCH, entry -> entry.matchCategory().isEqualTo(MatchCategory.MATCHING_GROUPS_NOT_SEARCH))
+                .withPseudoClass(NOT_MATCHING_SEARCH_AND_GROUPS, entry -> entry.matchCategory().isEqualTo(MatchCategory.NOT_MATCHING_SEARCH_AND_GROUPS))
                 .setOnDragDetected(this::handleOnDragDetected)
                 .setOnDragDropped(this::handleOnDragDropped)
                 .setOnDragOver(this::handleOnDragOver)
@@ -158,13 +150,21 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
 
         this.getSortOrder().clear();
 
+        // force match category column to be the first sort order, (match_category column is always the first column)
+        this.getSortOrder().addFirst(getColumns().getFirst());
+        this.getSortOrder().addListener((ListChangeListener<TableColumn<BibEntryTableViewModel, ?>>) change -> {
+                if (!this.getSortOrder().getFirst().equals(getColumns().getFirst())) {
+                    this.getSortOrder().addFirst(getColumns().getFirst());
+                }
+            });
+
         mainTablePreferences.getColumnPreferences().getColumnSortOrder().forEach(columnModel ->
                 this.getColumns().stream()
                     .map(column -> (MainTableColumn<?>) column)
                     .filter(column -> column.getModel().equals(columnModel))
                     .findFirst()
                     .ifPresent(column -> {
-                        LOGGER.debug("Adding sort order for col {} ", column);
+                        LOGGER.trace("Adding sort order for col {} ", column);
                         this.getSortOrder().add(column);
                     }));
 
@@ -179,7 +179,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         // Enable sorting
         model.getEntriesFilteredAndSorted().comparatorProperty().bind(this.comparatorProperty());
 
-        this.getStylesheets().add(MainTable.class.getResource("MainTable.css").toExternalForm());
+        this.getStylesheets().add(Objects.requireNonNull(MainTable.class.getResource("MainTable.css")).toExternalForm());
 
         // Store visual state
         new PersistenceVisualStateTable(this, mainTablePreferences.getColumnPreferences()).addListeners();
@@ -187,25 +187,17 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         setupKeyBindings(keyBindingRepository);
 
         this.setOnKeyTyped(key -> {
-            if (this.getSortOrder().isEmpty()) {
+            if (this.getSortOrder().size() <= 1) {
                 return;
             }
-            this.jumpToSearchKey(getSortOrder().getFirst(), key);
+            // skip match category column
+            this.jumpToSearchKey(getSortOrder().get(1), key);
         });
 
         database.getDatabase().registerListener(this);
 
-        MainTableColumnFactory rightClickMenuFactory = new MainTableColumnFactory(
-                database,
-                preferencesService,
-                preferencesService.getMainTableColumnPreferences(),
-                undoManager,
-                dialogService,
-                stateManager,
-                taskExecutor);
-
         // Enable the header right-click menu.
-        new MainTableHeaderContextMenu(this, rightClickMenuFactory, tabContainer, dialogService).show(true);
+        new MainTableHeaderContextMenu(this, mainTableColumnFactory, tabContainer, dialogService).show(true);
     }
 
     /**
@@ -239,8 +231,9 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                                     .startsWith(columnSearchTerm))
             .findFirst()
             .ifPresent(item -> {
-                this.scrollTo(item);
-                this.clearAndSelect(item.getEntry());
+                getSelectionModel().clearSelection();
+                getSelectionModel().select(item);
+                scrollTo(item);
             });
     }
 
@@ -257,27 +250,43 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         });
     }
 
-    public void copy() {
-        List<BibEntry> selectedEntries = getSelectedEntries();
+    private void scrollToNextMatchCategory() {
+        BibEntryTableViewModel selectedEntry = getSelectionModel().getSelectedItem();
+        if (selectedEntry == null) {
+            return;
+        }
 
-        if (!selectedEntries.isEmpty()) {
-            List<BibtexString> stringConstants = getUsedStringValues(selectedEntries);
-            try {
-                if (stringConstants.isEmpty()) {
-                    clipBoardManager.setContent(selectedEntries, entryTypesManager);
-                } else {
-                    clipBoardManager.setContent(selectedEntries, entryTypesManager, stringConstants);
-                }
-                dialogService.notify(Localization.lang("Copied %0 entry(ies)", selectedEntries.size()));
-            } catch (IOException e) {
-                LOGGER.error("Error while copying selected entries to clipboard.", e);
+        MatchCategory currentMatchCategory = selectedEntry.matchCategory().get();
+        for (int i = getSelectionModel().getSelectedIndex(); i < getItems().size(); i++) {
+            if (getItems().get(i).matchCategory().get() != currentMatchCategory) {
+                getSelectionModel().clearSelection();
+                getSelectionModel().select(i);
+                scrollTo(i);
+                return;
             }
         }
     }
 
-    public void cut() {
-        copy();
-        libraryTab.delete(StandardActions.CUT);
+    private void scrollToPreviousMatchCategory() {
+        BibEntryTableViewModel selectedEntry = getSelectionModel().getSelectedItem();
+        if (selectedEntry == null) {
+            return;
+        }
+
+        MatchCategory currentMatchCategory = selectedEntry.matchCategory().get();
+        for (int i = getSelectionModel().getSelectedIndex(); i >= 0; i--) {
+            if (getItems().get(i).matchCategory().get() != currentMatchCategory) {
+                MatchCategory targetMatchCategory = getItems().get(i).matchCategory().get();
+                // found the previous category, scroll to the first entry of that category
+                while ((i >= 0) && getItems().get(i).matchCategory().get() == targetMatchCategory) {
+                    i--;
+                }
+                getSelectionModel().clearSelection();
+                getSelectionModel().select(i + 1);
+                scrollTo(i + 1);
+                return;
+            }
+        }
     }
 
     private void setupKeyBindings(KeyBindingRepository keyBindings) {
@@ -322,6 +331,14 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                         deleteAction.execute();
                         event.consume();
                         break;
+                    case SCROLL_TO_NEXT_MATCH_CATEGORY:
+                        scrollToNextMatchCategory();
+                        event.consume();
+                        break;
+                    case SCROLL_TO_PREVIOUS_MATCH_CATEGORY:
+                         scrollToPreviousMatchCategory();
+                        event.consume();
+                        break;
                     default:
                         // Pass other keys to parent
                 }
@@ -339,39 +356,6 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         getSelectionModel().clearSelection();
         getSelectionModel().selectLast();
         scrollTo(getItems().size() - 1);
-    }
-
-    public void paste() {
-        List<BibEntry> entriesToAdd;
-        String content = ClipBoardManager.getContents();
-        entriesToAdd = importHandler.handleBibTeXData(content);
-        if (entriesToAdd.isEmpty()) {
-            entriesToAdd = handleNonBibTeXStringData(content);
-        }
-        if (entriesToAdd.isEmpty()) {
-            return;
-        }
-
-        importHandler.importEntriesWithDuplicateCheck(database, entriesToAdd);
-    }
-
-    private List<BibEntry> handleNonBibTeXStringData(String data) {
-        try {
-            return this.importHandler.handleStringData(data);
-        } catch (FetcherException exception) {
-            if (exception instanceof FetcherClientException) {
-                dialogService.showInformationDialogAndWait(Localization.lang("Look up identifier"), Localization.lang("No data was found for the identifier"));
-            } else if (exception instanceof FetcherServerException) {
-                dialogService.showInformationDialogAndWait(Localization.lang("Look up identifier"), Localization.lang("Server not available"));
-            } else {
-                dialogService.showErrorDialogAndWait(exception);
-            }
-            return List.of();
-        }
-    }
-
-    public void dropEntry(List<BibEntry> entriesToAdd) {
-        importHandler.importEntriesWithDuplicateCheck(database, entriesToAdd);
     }
 
     private void handleOnDragOver(TableRow<BibEntryTableViewModel> row, BibEntryTableViewModel item, DragEvent event) {
@@ -434,8 +418,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
             // Center -> link files to entry
             // Depending on the pressed modifier, move/copy/link files to drop target
             switch (ControlHelper.getDroppingMouseLocation(row, event)) {
-                case TOP, BOTTOM ->
-                        importHandler.importFilesInBackground(files).executeWith(taskExecutor);
+                case TOP, BOTTOM -> importHandler.importFilesInBackground(files, database, filePreferences).executeWith(taskExecutor);
                 case CENTER -> {
                     BibEntry entry = target.getEntry();
                     switch (event.getTransferMode()) {
@@ -445,11 +428,11 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                         }
                         case MOVE -> {
                             LOGGER.debug("Mode MOVE"); // alt on win
-                            importHandler.getLinker().moveFilesToFileDirRenameAndAddToEntry(entry, files, libraryTab.getIndexingTaskManager());
+                            importHandler.getLinker().moveFilesToFileDirRenameAndAddToEntry(entry, files, libraryTab.getLuceneManager());
                         }
                         case COPY -> {
                             LOGGER.debug("Mode Copy"); // ctrl on win
-                            importHandler.getLinker().copyFilesToFileDirAndAddToEntry(entry, files, libraryTab.getIndexingTaskManager());
+                            importHandler.getLinker().copyFilesToFileDirAndAddToEntry(entry, files, libraryTab.getLuceneManager());
                         }
                     }
                 }
@@ -466,9 +449,8 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         boolean success = false;
 
         if (event.getDragboard().hasFiles()) {
-            List<Path> files = event.getDragboard().getFiles().stream().map(File::toPath).collect(Collectors.toList());
-            importHandler.importFilesInBackground(files).executeWith(taskExecutor);
-
+            List<Path> files = event.getDragboard().getFiles().stream().map(File::toPath).toList();
+            importHandler.importFilesInBackground(files, this.database, filePreferences).executeWith(taskExecutor);
             success = true;
         }
 
@@ -497,9 +479,5 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                     .stream()
                     .filter(viewModel -> viewModel.getEntry().equals(entry))
                     .findFirst();
-    }
-
-    private List<BibtexString> getUsedStringValues(List<BibEntry> entries) {
-        return database.getDatabase().getUsedStrings(entries);
     }
 }
